UGC-5887 | Fix wrong z-index of CM layer

--- a/resources/modules/ve-cm/ve.ui.CodeMirror.v6.less
+++ b/resources/modules/ve-cm/ve.ui.CodeMirror.v6.less
@@ -7,7 +7,7 @@
 
 	.cm-editor {
 		height: 100%;
-		z-index: -1;
+		z-index: 1;
 		position: absolute !important;
 		top: 0;
 		left: 0;
